force-app/main/default/objects/Messages__mdt/Messages__mdt.object-meta.xml
<CustomObject>
    <description>Validation/Warning Message for Various Validations</description>
    <label>Messages</label>
    <pluralLabel>Messages</pluralLabel>
</CustomObject>