force-app/main/default/objects/Messages__mdt/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <description>Detailed Description</description>
    <inlineHelpText>Detailed Description of the Message</inlineHelpText>
    <label>Detailed Description</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>