force-app/main/default/objects/Messages__mdt/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>Messages</description>
    <inlineHelpText>Messages</inlineHelpText>
    <label>Messages</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>