force-app/main/default/objects/Messages__mdt/fields/MessagetNumber__c.field-meta.xml
<CustomField>
    <fullName>MessagetNumber__c</fullName>
    <description>MessageSetNumber</description>
    <inlineHelpText>MessageSetNumber</inlineHelpText>
    <label>MessagetNumber</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>