force-app/main/default/objects/Messages__mdt/listViews/Messages.listView-meta.xml
<ListView>
    <fullName>Messages</fullName>
    <columns>Message_Type__c</columns>
    <columns>MessagetNumber__c</columns>
    <columns>Messages__c</columns>
    <filterScope>Everything</filterScope>
    <label>Messages</label>
</ListView>